# AvatarXM

./: .clang-format  .gitignore  CMakeLists.txt  README.md
UnitTests/: RunAvatar.cpp  env_test.cpp  torch_gaussianBlur_test.cpp  torch_mat_test.cpp
cfg/: avatarXM.yaml  config.yaml
include/: avatar.h
include/structures/: structs.cpp  structs.h
include/task/: avatarHandler.h  wavToLipHandler.h
include/utils/: config.h  config_yaml.h  extraAudioFeature.h  utils.h
src/: avatar.cpp
src/task/: avatarHandler.cpp  wavToLipHandler.cpp
src/utils/: extraAudioFeature.cpp
tools/: main.cpp
